--- a/DOMAIN1 - Security and Risk Management/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1 - Security and Risk Management/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -199,15 +199,15 @@ In an **acquisition**, a company purchases another company's assets, resulting i
 
 Let's explore how these processes intersect with cybersecurity measures:
 
-Acquisitions and Mergers: Acquisitions and mergers introduce heightened risks such as information disclosure, data loss, and downtime. Without proper security considerations, the risks associated with obtained products persist throughout their deployment lifecycle. To mitigate these risks, it's essential to conduct thorough evaluations and integrate security assessments during the acquisition process.
+**Acquisitions and Mergers:** Acquisitions and mergers introduce heightened risks such as information disclosure, data loss, and downtime. Without proper security considerations, the risks associated with obtained products persist throughout their deployment lifecycle. To mitigate these risks, it's essential to conduct thorough evaluations and integrate security assessments during the acquisition process.
 
-Divestitures: Divestitures involve selling off parts of an organization, necessitating stringent security measures to prevent data leakage and maintain confidentiality. Cybersecurity professionals must collaborate closely with business and legal teams to identify and mitigate potential vulnerabilities. Additionally, segmenting the Information Security Management System (ISMS) ensures compliance without revealing sensitive information during audits.
+**Divestitures:** Divestitures involve selling off parts of an organization, necessitating stringent security measures to prevent data leakage and maintain confidentiality. Cybersecurity professionals must collaborate closely with business and legal teams to identify and mitigate potential vulnerabilities. Additionally, segmenting the Information Security Management System (ISMS) ensures compliance without revealing sensitive information during audits.
 
 When assessing a third party for security integration, take into account the following procedures as effective chances to evaluate the 3rd party:
-1. Conduct an On-Site Assessment: Visit the organization's premises to conduct interviews with staff and observe their operational practices.
-2. Review Document Exchange: Investigate how data and documents are exchanged, along with the formal procedures for conducting assessments and reviews.
-3. Review Processes and Policies: Request copies of security policies, processes, procedures, as well as documentation of incidents and responses for thorough examination.
-4. Third-Party Audit: Engage an independent third-party auditor, accredited by the American Institute of Certified Public Accountants (AICPA), to conduct an impartial review of the entity's security infrastructure based on Service Organization Control (SOC) reports.
+1. **Conduct an On-Site Assessment:** Visit the organization's premises to conduct interviews with staff and observe their operational practices.
+2. **Review Document Exchange:** Investigate how data and documents are exchanged, along with the formal procedures for conducting assessments and reviews.
+3. **Review Processes and Policies:** Request copies of security policies, processes, procedures, as well as documentation of incidents and responses for thorough examination.
+4. **Third-Party Audit:** Engage an independent third-party auditor, accredited by the American Institute of Certified Public Accountants (AICPA), to conduct an impartial review of the entity's security infrastructure based on Service Organization Control (SOC) reports.
 
 **System and Organization Controls (SOC)** reports are independent audit reports that evaluate the security, availability, and compliance of an organization’s systems, particularly cloud service providers and third-party vendors. These reports are critical in risk management, vendor assessments, and regulatory compliance.
 There are three main types of SOC reports, each serving different purposes:
@@ -232,20 +232,22 @@ SOC 2 Type II: Evaluates controls over a longer period (3-12 months) to verify o
 
 SOC reports are a crucial part of third-party risk management and compliance.
 
-| SOC Type  | Purpose                                                                                     | Audience                                                                                           | Types (if any)                                               | Example                                                                                              |
-|-----------|---------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------|---------------------------------------------------------------|------------------------------------------------------------------------------------------------------|
-| SOC 1     | Evaluates controls related to financial transactions and reporting.                         | Accounting and finance teams, auditors, and companies relying on a vendor for financial processing | –                                                             | A payroll processing service undergoes a SOC 1 audit to prove its system properly calculates salaries. |
-| SOC 2     | Focuses on security, availability, processing integrity, confidentiality, and privacy of data (AICPA Trust Services Criteria). | IT, cybersecurity, and compliance teams evaluating third-party vendors                             | Type I: Design effectiveness at a point in time  <br> Type II: Operational effectiveness over time | A cloud provider undergoes a SOC 2 audit to prove it secures customer data properly.                  |
-| SOC 3     | High-level summary of SOC 2 findings for public distribution.                               | Potential customers and stakeholders                                                                | –                                                             | A SaaS company publishes a SOC 3 report online to reassure customers about its security compliance.  |
+| SOC Type | Purpose                                                                                                                        | Audience                                                                                           | Types (if any)                                                                                     | Example                                                                                                |
+| -------- | ------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------ |
+| SOC 1    | Evaluates controls related to financial transactions and reporting.                                                            | Accounting and finance teams, auditors, and companies relying on a vendor for financial processing | –                                                                                                  | A payroll processing service undergoes a SOC 1 audit to prove its system properly calculates salaries. |
+| SOC 2    | Focuses on security, availability, processing integrity, confidentiality, and privacy of data (AICPA Trust Services Criteria). | IT, cybersecurity, and compliance teams evaluating third-party vendors                             | Type I: Design effectiveness at a point in time  <br> Type II: Operational effectiveness over time | A cloud provider undergoes a SOC 2 audit to prove it secures customer data properly.                   |
+| SOC 3    | High-level summary of SOC 2 findings for public distribution.                                                                  | Potential customers and stakeholders                                                               | –                                                                                                  | A SaaS company publishes a SOC 3 report online to reassure customers about its security compliance.    |
 
+🔗In its Service Trust Portal Microsoft explains how its cloud services protect your data, and how you can manage cloud data security and compliance for your organization. You can find all available reports (included SOC reports) here: https://servicetrust.microsoft.com/
 
-:link: In its Service Trust Portal Microsoft explains how its cloud services protect your data, and how you can manage cloud data security and compliance for your organization. You can find all available reports (included SOC reports) here: https://servicetrust.microsoft.com/
-
-:bulb: **Audit the auditor:** You are accountable to verify the credibility and integrity of those responsible for evaluating or assessing your organization's activities, processes, or compliance.
+>[!WARNING]
+>**Audit the auditor:** You are accountable to verify the credibility and integrity of those responsible for evaluating or assessing your organization's activities, processes, or compliance.
 
 There are two more important concepts to understand when talking about organizational processes: business enablement and process enhancement.
-Business Enablement refers to the process of empowering an organization to take on new opportunities, markets, or capabilities. It involves leveraging technology, innovation, or strategic changes to open new possibilities. This concept goes beyond optimizing existing operations; it creates value by enabling activities or services that were previously out of reach.
-Process Enhancement refers to improving existing processes to increase efficiency, reduce waste, and enhance the quality of outcomes. This typically involves process re-engineering—redesigning workflows, systems, or operations to achieve better performance.
+
+`Business Enablement` refers to the process of empowering an organization to take on new opportunities, markets, or capabilities. It involves leveraging technology, innovation, or strategic changes to open new possibilities. This concept goes beyond optimizing existing operations; it creates value by enabling activities or services that were previously out of reach.
+
+`Process Enhancement` refers to improving existing processes to increase efficiency, reduce waste, and enhance the quality of outcomes. This typically involves process re-engineering—redesigning workflows, systems, or operations to achieve better performance.
 
 | Category     | Business Enablement                          | Process Enhancement                        |
 |--------------|-----------------------------------------------|---------------------------------------------|
@@ -255,33 +257,14 @@ Process Enhancement refers to improving existing processes to increase efficienc
 | **Examples** | Entering a new market <br> Launching new tech | Automating workflows <br> Reducing waste    |
 | **Outcome**  | Expands business horizons                     | Boosts competitiveness and margins          |
 
-Governance committees play a crucial role in overseeing organizational structures and practices (also during mergers, acquisition and divestitures). A governance committee is a group of stakeholders responsible for overseeing an organization's cybersecurity strategy, policies, and compliance. It ensures that cybersecurity efforts align with the organization's goals, risk appetite, and regulatory requirements.
+**Governance committees** play a crucial role in overseeing organizational structures and practices (also during mergers, acquisition and divestitures). A governance committee is a `group of stakeholders responsible for overseeing an organization's cybersecurity strategy`, policies, and compliance. It ensures that cybersecurity efforts align with the organization's goals, risk appetite, and regulatory requirements.
+
 Key Functions of a Governance Committee are usually:
-- Strategic Oversight: Sets the direction for cybersecurity initiatives, ensuring they support business objectives.
-- Policy Development: Approves and reviews security policies and ensures they are updated regularly.
-- Risk Management: Monitors cybersecurity risks and ensures appropriate mitigation measures are in place.
-- Compliance: Ensures adherence to regulatory and legal requirements for cybersecurity.
-- Accountability: Assigns roles and responsibilities for cybersecurity and holds teams accountable for implementation and performance.
-
-```mermaid
-flowchart TD
-    style GCommittee fill:#eee,stroke:#333,stroke-width:2
-    style Strategic fill:#fff,stroke:#666
-    style Policy fill:#fff,stroke:#666
-    style Risk fill:#fff,stroke:#666
-    style Compliance fill:#fff,stroke:#666
-    style Accountability fill:#fff,stroke:#666
-
-    GCommittee["Governance Committee<br><sub><i>Key Functions</i></sub>"]:::header
-
-    GCommittee --> Strategic["Strategic Oversight<br><sub>Sets cybersecurity direction aligned with business goals</sub>"]
-    GCommittee --> Policy["Policy Development<br><sub>Approves and reviews security policies regularly</sub>"]
-    GCommittee --> Risk["Risk Management<br><sub>Monitors cyber risks and ensures mitigation</sub>"]
-    GCommittee --> Compliance["Compliance<br><sub>Ensures legal and regulatory adherence</sub>"]
-    GCommittee --> Accountability["Accountability<br><sub>Assigns roles and ensures responsibility</sub>"]
-
-    classDef header fill:#eee,stroke:#333,stroke-width:2
-```
+- **Strategic Oversight:** Sets the direction for cybersecurity initiatives, ensuring they support business objectives.
+- **Policy Development:** Approves and reviews security policies and ensures they are updated regularly.
+- **Risk Management:** Monitors cybersecurity risks and ensures appropriate mitigation measures are in place.
+- **Compliance:** Ensures adherence to regulatory and legal requirements for cybersecurity.
+- **Accountability:** Assigns roles and responsibilities for cybersecurity and holds teams 
 
 Who Typically Participates in a governance committee:
 - Senior executives (e.g., CIO, CISO, or CTO)
@@ -289,11 +272,13 @@ Who Typically Participates in a governance committee:
 - Risk management professionals
 - Representatives from business units
 - Board members in larger organizations
-- Governance committees provide valuable insights and recommendations to ensure a secure environment. Collaborating with governance committees enhances transparency and accountability in security governance processes.
 
-:necktie: A governance committee is more likely to be present in companies that face high risks, regulatory pressures, or operational complexity. It reflects a mature and proactive approach to cybersecurity management.
+Governance committees provide valuable insights and recommendations to ensure a secure environment. Collaborating with governance committees enhances transparency and accountability in security governance processes.
 
-SABSA (Sherwood Applied Business Security Architecture) is a framework and methodology used to develop a risk-driven, business-aligned enterprise security architecture. It focuses on integrating security into business processes by linking security solutions directly to business goals, risks, and requirements.
+>[!note]
+>A governance committee is more likely to be present in companies that face high risks, regulatory pressures, or operational complexity. It reflects a mature and proactive approach to cybersecurity management.
+
+**SABSA (Sherwood Applied Business Security Architecture)** is a framework and methodology used to develop a risk-driven, business-aligned enterprise security architecture. It focuses on integrating security into business processes by linking security solutions directly to business goals, risks, and requirements.
 The framework is structured around six layers, starting from Business Requirements and cascading down to Operational Security Controls. It uses a matrix approach, and emphasizes aligning security strategies with business objectives through its lifecycle phases: Strategy and Planning, Design, Implementation, and Management.
 The following table summarizes the SABSA model’s core structure:
 
@@ -306,9 +291,12 @@ The following table summarizes the SABSA model’s core structure:
 | **Component Architecture**| System-specific implementations         | How is it implemented?        | Technology configurations and integration      |
 | **Operational Architecture**| Management and operations             | How is it managed?            | Processes, monitoring, and response plans      |
 
-:link: The [Sabsa site](https://sabsa.org/) provides resources, training, certification, and information about the SABSA framework, a methodology for creating risk-driven, business-aligned security architectures.
+🔗The [Sabsa site](https://sabsa.org/) provides resources, training, certification, and information about the SABSA framework, a methodology for creating risk-driven, business-aligned security architectures.
+
+🔗 Sabsa will be described also in [1.3.4](### 1.3.4 Security control frameworks (e.g., International Organization for Standardization (ISO), National Institute of Standards and Technology (NIST), Control Objectives for Information and Related Technology (COBIT), Sherwood Applied Business Security Architecture (SABSA), Payment Card Industry (PCI), Federal Risk and Authorization Management Program (FedRAMP))
 
 ### Open Questions ###
+
 1. Differentiate between acquisitions and mergers in the context of business operations.
 <details>
   <summary>Show answer</summary>
@@ -372,7 +360,7 @@ The SABSA (Sherwood Applied Business Security Architecture) framework provides a
 
 ## 1.3.3 Organizational roles and responsibilities ##
 
-A security role refers to the contribution an individual makes to the implementation and management of security measures within an organization. These roles may not always be explicitly defined in job descriptions, as they can vary and evolve over time. Understanding security roles is essential for establishing effective communication and support frameworks within an organization.
+A **security role** refers to the `contribution an individual makes to the implementation and management of security measures within an organization`. These roles may not always be explicitly defined in job descriptions, as they can vary and evolve over time. Understanding security roles is essential for establishing effective communication and support frameworks within an organization.
 
 | **Role**                        | **Description** |
 |----------------------------------|------------------|
@@ -394,16 +382,20 @@ A security role refers to the contribution an individual makes to the implementa
 | **Change Control Analyst** | Reviews and approves/rejects change requests to systems or software. Ensures changes are secure and maintain performance. |
 | **Data Analyst** | Organizes and structures data to meet company objectives. Works with data owners to align data storage with business needs. |
 
-:necktie: Security roles need to be in sync and cohesive with organizational structures. Certain companies may define and assign roles to oversee data, systems, and processes (e.g., data owner, system owner, process owner).
+>[!TIP]
+>Security roles need to be in sync and cohesive with organizational structures. Certain companies may define and assign roles to oversee data, systems, and processes (e.g., data owner, system owner, process owner).
 
 When talking about roles it is always important the difference between privacy and cybersecurity.
 
-:bulb: **Privacy vs Cybersecurity.**  **Privacy** refers to the rights individuals have to control their personal information and how it’s used. It’s about ensuring that personal data is handled responsibly, often under specific regulations or laws. For example, when you fill out an online form, you may have the right to control who can access your data and how it's used, like opting out of marketing emails or requesting your data be deleted. **Cybersecurity**, however, is the practice of protecting data, networks, and systems from attacks, breaches, and unauthorized access. It includes technologies, processes, and practices designed to safeguard systems from threats like hacking or malware. For instance, encryption and firewalls help protect sensitive data from being exposed or stolen.
-Cybersecurity is essential for achieving privacy because, without strong security measures, personal data is vulnerable to unauthorized access and exploitation, which would undermine the privacy protections put in place.
+>[!WARNING]
+> **Privacy vs Cybersecurity.**  **Privacy** refers to the rights individuals have to control their personal information and how it’s used. It’s about ensuring that personal data is handled responsibly, often under specific regulations or laws. For example, when you fill out an online form, you may have the right to control who can access your data and how it's used, like opting out of marketing emails or requesting your data be deleted. **Cybersecurity**, however, is the practice of protecting data, networks, and systems from attacks, breaches, and unauthorized access. It includes technologies, processes, and practices designed to safeguard systems from threats like hacking or malware. For instance, encryption and firewalls help protect sensitive data from being exposed or stolen.
+**Cybersecurity is essential for achieving privacy because, without strong security measures, personal data is vulnerable to unauthorized access and exploitation, which would undermine the privacy protections put in place.**
 
-:bulb: The GDPR (General Data Protection Regulation) is commonly misinterpreted as a "privacy law," but it’s actually a data protection law. It establishes rules for how organizations should protect the personal data of EU citizens, emphasizing the security and proper handling of data.
+>[!NOTE]
+>The GDPR (General Data Protection Regulation) is commonly misinterpreted as a "privacy law," but it’s actually a data protection law. It establishes rules for how organizations should protect the personal data of EU citizens, emphasizing the security and proper handling of data.
 
 ### Open Questions ###
+
 1. Differentiate between the roles of a Data Owner and a Data Custodian.
 <details>
   <summary>Show answer</summary>
@@ -474,19 +466,21 @@ Security control frameworks specify formalized sets of controls or security meas
 | **SABSA** | Sherwood Applied Business Security Architecture; a risk- and business-aligned framework for enterprise security architecture. | [Link](https://en.wikipedia.org/wiki/Sherwood_Applied_Business_Security_Architecture) |
 | **CIS** | The Center for Internet Security Controls consists of 18 controls, including inventory, data protection, configuration, vulnerability management, and more. | [Link](https://en.wikipedia.org/wiki/Center_for_Internet_Security) |
 
-:bulb: Frameworks undergo regular updates, and while you are not required to know their specific release versions, you should be familiar with the primary topics they cover. Take the time to explore the provided links and add your observations to the table above.
+>[!WARNING]
+>Frameworks undergo regular updates, and while you are not required to know their specific release versions, you should be familiar with the primary topics they cover. Take the time to explore the provided links and add your observations to the table above.
 
-:brain: It is advisable not to rely on memorization of the table above. To truly understand its content, it is necessary to invest time in studying each framework thoroughly. While memorizing the table might suffice for answering CISSP questions, the information may be forgotten shortly after the exam. It's best to avoid this approach.
+>[!WARNING]
+>It is advisable not to rely on memorization of the table above. To truly understand its content, it is necessary to invest time in studying each framework thoroughly. While memorizing the table might suffice for answering some CISSP questions, the information may be forgotten shortly after the exam. It's best to avoid this approach.
 
 Remember that ISO/IEC 27001 and NIST SP 800-53 are two widely recognized frameworks for managing and implementing information security controls. As we have seen in the table above:
 - ISO 27001: An international standard for information security management systems (ISMS), used globally by organizations of all sizes and industries.
 - NIST SP 800-53: A U.S.-focused standard providing detailed security and privacy controls, widely adopted by federal agencies and private organizations needing compliance with government regulations.
 
 They have in common: 
-Risk-Based Approach: Both frameworks emphasize identifying and mitigating risks to protect assets.
-Control Categories: They cover similar areas like access control, incident response, and physical security.
-Customizability: Both allow organizations to tailor controls based on their specific needs and risks.
-Focus on Continuous Improvement: Both encourage ongoing monitoring, assessment, and refinement of security measures.
+- `Risk-Based Approach`: Both frameworks emphasize identifying and mitigating risks to protect assets.
+- `Control Categories`: They cover similar areas like access control, incident response, and physical security.
+- `Customizability`: Both allow organizations to tailor controls based on their specific needs and risks.
+- `Focus on Continuous Improvement`: Both encourage ongoing monitoring, assessment, and refinement of security measures.
 
 While their key differences are depicted in the table below:
 
@@ -498,7 +492,8 @@ While their key differences are depicted in the table below:
 | **Certification** | Offers certification via audits                 | No formal certification process; self-assessment               |
 | **Detail Level**| High-level control objectives                   | Highly detailed, specific control implementations              |
 
-### Open Questions ###
+### Open Questions 
+###
 1. What is the purpose of security control frameworks?
 <details>
   <summary>Show answer</summary>
@@ -577,11 +572,14 @@ Illustrating due diligence and due care stands as the sole method to refute negl
 
 Due diligence involves the creation of a structured security framework comprising a security policy, standards, baselines, guidelines, and procedures. On the other hand, due care entails the ongoing implementation of this security framework across the IT infrastructure of an organization.
 
-:brain: Distinguishing between due care and diligence could present a challenge in your CISSP exam or job interview. Ensure comprehension of the provided table, but refrain from overanalyzing to avoid potential pitfalls.
+>[!NOTE]
+>Distinguishing between due care and diligence could present a challenge in your CISSP exam or job interview. Ensure comprehension of the provided table, but refrain from overanalyzing to avoid potential pitfalls.
 
-:brain: Due care: Do control. Due diligence: Do detect
+>[!TIP]
+>Due care: Do control. Due diligence: Do detect
 
 ### Open Questions ###
+
 1. What is the primary purpose of demonstrating due care and due diligence in a cybersecurity context?
 <details>
   <summary>Show answer</summary>
