--- a/DOMAIN1 - Security and Risk Management/1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
+++ b/DOMAIN1 - Security and Risk Management/1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
@@ -10,31 +10,13 @@ An investigation will vary based on incident type. As an example, for a financia
 
 - **Regulatory**: A regulatory investigation is conducted by a regulatory body, such as the Securities and Exchange Commission (SEC) or Financial Industry Regulatory Authority (FINRA), against an organization suspected of an infraction. In such cases, the organization is required to comply with the investigation, for example, by not hiding or destroying evidence.
 
-```mermaid 
-flowchart TB
-    A[Types of Investigations]
-
-    A --> B1["Administrative
-    HR / Internal Issues"]
-
-    A --> B2["Criminal
-    Court Conviction
-    Beyond Reasonable Doubt"]
-
-    A --> B3["Civil
-    Disputes
-    Preponderance of Evidence"]
-
-    A --> B4["Industry Standards
-    Best Practices
-    Often Voluntary"]
-
-    A --> B5["Regulatory
-    Regulatory Bodies
-    Mandatory Compliance"]
-
-
-```
+| Investigation Type | Description                         | Additional Notes           |
+|--------------------|-----------------------------------|----------------------------|
+| Administrative     | HR / Internal Issues               |                            |
+| Criminal           | Court Conviction                  | Beyond Reasonable Doubt    |
+| Civil              | Disputes                         | Preponderance of Evidence  |
+| Industry Standards | Best Practices                   | Often Voluntary            |
+| Regulatory         | Regulatory Bodies                | Mandatory Compliance       |
 
 ### Open Questions ###
 1. What is the primary difference between a criminal and a civil investigation?
