--- a/DOMAIN1 - Security and Risk Management/1.6 Develop, document, and implement security policy, standards, procedures, and guidelines.md
+++ b/DOMAIN1 - Security and Risk Management/1.6 Develop, document, and implement security policy, standards, procedures, and guidelines.md
@@ -3,16 +3,13 @@ In many organizations, the hierarchy of organizational documents outlines overar
 
 A **Policy** is a document that `defines the scope of security needed by the organization and discusses the assets that require protection and the extent to which security solutions should go to provide the necessary protection`. The security policy is an overview or generalization of an organization’s security needs. It defines the strategic security objectives, vision, and goals and outlines the security framework of an organization. The security policy is used to assign responsibilities, define roles, specify audit requirements, outline enforcement processes, indicate compliance requirements, and define acceptable risk levels. Compared to other organizational documents, policies tend to remain more stable over time. They offer a foundation for the organization's management, enabling leaders to establish standards and develop procedures that align with the overarching policy objectives. Policies should offer management the necessary flexibility to respond to emerging circumstances or technological advancements without requiring frequent revisions. 
 
->[!NOTE]
-> Established organizations **regularly assess their policies** as part of their **governance** procedures. They must consider evolving external compliance requirements and shifts in business strategies. The policy review process should address the evolving needs of external stakeholders to ensure consistency in policy execution by management.
+> ℹ Established organizations **regularly assess their policies** as part of their **governance** procedures. They must consider evolving external compliance requirements and shifts in business strategies. The policy review process should address the evolving needs of external stakeholders to ensure consistency in policy execution by management.
 
->[!WARNING]
->The application of the term "policy" in implementing security measures within an organization can often lead to confusion. For instance, while a password policy might not be a concern for the governing body, it holds significance for the management team. This wide-ranging interpretation of the term "policy" highlights a significant challenge within our industry. The absence of a standardized language for information security practices has been consistently recognized as a hindrance to the establishment of a unified body of practice in the information security community. This challenge is further compounded in an international context, where translations and cultural disparities influence how individuals perceive information.
+>⚠ The application of the term "policy" in implementing security measures within an organization can often lead to confusion. For instance, while a password policy might not be a concern for the governing body, it holds significance for the management team. This wide-ranging interpretation of the term "policy" highlights a significant challenge within our industry. The absence of a standardized language for information security practices has been consistently recognized as a hindrance to the establishment of a unified body of practice in the information security community. This challenge is further compounded in an international context, where translations and cultural disparities influence how individuals perceive information.
 
->[!WARNING]
->When developing a security policy, it's important not to delve too deeply into intricate details. Instead, focus on providing clear and concise information that outline the overarching principles and objectives of your security measures.
+>⚠ When developing a security policy, it's important not to delve too deeply into intricate details. Instead, focus on providing clear and concise information that outline the overarching principles and objectives of your security measures.
 
->[!NOTE] After setting organizational objectives, management implements policies to achieve them.
+>💡 After setting organizational objectives, management implements policies to achieve them.
 
 **Standards** serve as a `valuable tool for efficient resource management`, ensuring consistency in control. These standards, endorsed by management, align directly with the organization's strategic goals and policies. While standards are primarily a management tool, they can also emerge from organizational practices. For instance, adopting a specific vendor's product may unintentionally establish a standard within the organization as various departments adopt the technology independently. To sum up, standards define compulsory requirements for the homogenous use of hardware, software, technology, and security controls. Standards are prescriptive and require compliance; adherence is mandatory. Organizations embracing standards must establish performance metrics to assess their implementation.
 
