--- a/DOMAIN1 - Security and Risk Management/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1 - Security and Risk Management/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -13,7 +13,7 @@ Closely aligned with corporate and IT governance, it ensures that security initi
 
 Below you can find a short timeline of GRC:
 
-![](../ChatGPT%20Image%20Feb%206,%202026,%2010_58_05%20PM.png)
+![](../Images/ChatGPT%20Image%20Feb%206,%202026,%2010_58_05%20PM.png)
 
 **Third-party governance** refers to the oversight and management of external entities that interact with an organization. This includes vendors, contractors, partners, and service providers who access or handle sensitive data or systems. Third-party governance is critical because these entities often introduce additional risks that can impact the organization’s security.
 
@@ -113,7 +113,7 @@ In contrast, the **Tactical Plan**, a mid-term strategy, furnishes details on ac
 
 The **Operational Plan**, on the other hand, constitutes a short-term, meticulously delineated strategy derived from the Strategic and Tactical Plans. Although its relevance is fleeting, necessitating frequent updates (monthly or quarterly), it serves as the cornerstone for operational activities, ensuring alignment with tactical objectives.
 
-![](../Screenshot%202026-02-06%20184352.png)
+![](../Images/Screenshot%202026-02-06%20184352.png)
 
 >ℹ Hierarchies play a crucial role in the CISSP approach, remember that plans, roles, documentation, and clearance levels must be appropriately structured and aligned within the organization chart.
 
