--- a/DOMAIN1 - Security and Risk Management/1.4 Understand legal,regulatory,compliance issues that pertain to infosec in a holistic context.md
+++ b/DOMAIN1 - Security and Risk Management/1.4 Understand legal,regulatory,compliance issues that pertain to infosec in a holistic context.md
@@ -357,7 +357,7 @@ The following table recaps the international frameworks exist that define privac
 
 🔗 The OECD Privacy Guidelines can be found at https://www.oecd.org/digital/privacy/
 
-![](../ChatGPT%20Image%20Feb%206,%202026,%2010_52_51%20PM.png)
+![](../Images/ChatGPT%20Image%20Feb%206,%202026,%2010_52_51%20PM.png)
 In the following we recap the most common worldwide privacy laws. These privacy laws aim to protect individuals' privacy rights, establish accountability for organizations processing personal data, and promote transparency and trust in the digital ecosystem. Compliance with these laws is crucial for businesses operating within their jurisdictions to avoid significant financial penalties and reputational damage.
 
 **General Data Protection Regulation (GDPR)**: The GDPR is a comprehensive data protection law enacted by the European Union (EU) to regulate the processing of personal data of individuals within the EU and European Economic Area (EEA). It imposes strict requirements on organizations handling personal data, including consent for data processing, data subject rights, data breach notification, and obligations for data controllers and processors. Non-compliance can result in severe penalties, including hefty fines of up to 4% of annual global turnover or €20 million, whichever is higher.
